# DocuSearch

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routers/: documents.py  index.py  qa.py  search.py
app/core/: chunking.py  config.py  embeddings.py  logging.py  retrieval.py
app/db/: models.py  session.py
app/services/: indexing.py  ingestion.py  qa.py  search.py
samples/: 01_overview.md  02_retries.md  03_chunking.txt
scripts/: demo_run.py  eval_cases.json  evaluate.py
tests/: conftest.py  test_chunking.py  test_embeddings.py  test_qa_citations.py
tests/integration/: test_e2e.py
