[project]
name = "docusearch"
version = "0.1.0"
description = "DocuSearch – Semantic Document Search & Knowledge Retrieval System (RAG-lite)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.115.6",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "sqlalchemy==2.0.36",
  "psycopg[binary]==3.2.3",
  "qdrant-client==1.12.1",
  "sentence-transformers==3.2.1",
  "numpy==2.1.3",
  "python-multipart==0.0.12",
  "pypdf==5.1.0",
  "httpx==0.27.2",
  "tenacity==9.0.0",
  "rich==13.9.4"
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "requests==2.32.3"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"